# QTree-game-engine-2D

./: .gitignore  CMakeLists.txt
include/: App.h  GameData.h  GameEngine.h  Settings.h  Types.h  X11.h
include/Base/: IDrawable.h  Transformable.h
include/Broadcast/: Broadcast.h  BroadcastHandler.h  DrawBroadcast.h  PointerBroadcast.h  UpdateBroadcast.h
include/Broadcast/Subscribers/: IDrawSub.h  IPointerSub.h  IUpdateSub.h
include/Components/: Decay.h  Moover.h  MouseFolower.h  Shooter.h  Transform.h
include/Components/Drawables/: Square.h
include/Drawables/: Square.h
include/Entities/: MouseSquare.h
include/EntitySystem/: Component.h  ComponentStarter.h  Entity.h  EntityContainers.h  OnDestroyNotifyer.h  RootEntity.h
include/EventData/: PointerEventData.h
include/Utils/: CpPtrContainer.h  Delegate.h  DestroyableContainer.h  cp_ptr.h
src/: App.cpp  GameEngine.cpp  main.cpp
src/Broadcast/: Broadcast.cpp  DrawBroadcast.cpp
src/Drawables/: Square.cpp
src/EntitySystem/: ComponentStarter.cpp  Entity.cpp  EntityContainers.cpp
